--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 quarkus.hibernate-orm.database.generation=drop-and-create
 
+
 quarkus.datasource.db-kind = postgresql
-quarkus.datasource.username = Project
+quarkus.datasource.username = project
 quarkus.datasource.password = 123456
 quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/projectdb
