--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-smallrye-openapi</artifactId>
     </dependency>
+
+    <dependency>
+    <groupId>javax.validation</groupId>
+    <artifactId>validation-api</artifactId>
+    <version>2.0.1.Final</version>
+</dependency>
+
     
     <dependency>
       <groupId>io.quarkus</groupId>
